Updated projects page and resume

--- a/pages/ProjectsPage.html
+++ b/pages/ProjectsPage.html
@@ -1,200 +1,141 @@
 < DOCTYPE html>
-<html lang="en">
-<meta property="og:title" content="Omorian Clifford's Portfolio" />
-<meta property="og:type" content="website" />
-<meta property="og:url" content="https://www.omorianclifford.com/pages/ProjectsPage">
-<meta property="og:image" src="/Images/portfolio_selfie.jpg" />
-<meta property="og:description"
-    content="The portfolio website of Omorian Clifford, a Game Development student and music producer/sound designer" />
-<meta name="theme-color" content="#00a2ff">
-<meta name="twitter:card" src="/Images/portfolio_selfie.jpg">
+    <html lang="en">
+        <meta property="og:title" content="Omorian Clifford's Portfolio" />
+        <meta property="og:type" content="website" />
+        <meta property="og:url" content="https://www.omorianclifford.com/pages/ProjectsPage">
+        <meta property="og:image" src="/Images/portfolio_selfie.jpg" />
+        <meta property="og:description"
+        content="The portfolio website of Omorian Clifford, a Game Development student and music producer/sound designer" />
+        <meta name="theme-color" content="#00a2ff">
+        <meta name="twitter:card" src="/Images/portfolio_selfie.jpg">
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/Sass/main.css">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
-    <title>Projects Page</title>
-</head>
+        <head>
+            <meta charset="UTF-8">
+            <meta http-equiv="X-UA-Compatible" content="IE=edge">
+            <meta name="viewport" content="width=device-width, initial-scale=1.0">
+            <link rel="stylesheet" href="/Sass/main.css">
+            <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+            <link rel="stylesheet"
+            href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+            <title>Projects Page</title>
+        </head>
 
-<body>
-    <header class="header" id="header">
-        <div class="header-container">
-            <div class="namehome"><a href="/index.html">Omorian Clifford</a></div>
-            <div class="about-me"><a href="/pages/AboutMePage.html">About me</a></div>
-            <div class="projects"><a href="/pages/ProjectsPage.html" style="color: #00a2ff;">Projects</a></div>
-            <div class="music"><a href="/pages/MusicPage.html">Music</a></div>
-            <div class="contact"><a href="/pages/ContactPage.html">Contact & CV</a></div>
-        </div>
-        <ul class="Menu" id="Menu">
-            <li><a href="/index.html">Home</a></li>
-            <li><a href="AboutMePage.html">About Me</a></li>
-            <li><a href="ProjectsPage.html">Projects</a></li>
-            <li><a href="MusicPage.html">Music</a></li>
-            <li><a href="ContactPage.html">Contact & CV</a></li>
-            <a class="Close" href="#">
-                <span class="material-icons">
-                    close
-                </span>
-            </a>
-        </ul>
-        <a class="Hamburger" href="#Menu">
-            <span class="material-icons">
-                menu
-            </span>
-        </a>
-    </header>
-
-    <div class="questionPanel" id="questionPanel">
-        <h1>How does this work?</h1>
-        <p>You can click on the images to make a popup appear, which will show you a description of the game.<br>
-            Alternatively, you can press and hold for a short amount of time to show a shorter description of the game
-        </p>
-        <a class="CloseButton" href="#"><br>&times;</a>
-    </div>
-
-    </div>
-
-    <div class="GamesContainer">
-        <div class="PText">
-            <a>Projects</a>
-        </div>
-        <a class="question" href="#questionPanel">
-            <span class="material-symbols-outlined">
-                help
-            </span>
-        </a>
-        <div class="GameOne">
-            <p><a class="TUE" href="#Popup1">
-                    <img class="TUEImg" src="/Images/tue.png" alt="The Unseeing Eye Art">
-                    <div class="TUEOverlay">A horror game in which you "see" with sound <br>(Unity) [GGJ 2022]</div>
-                </a></p>
-        </div>
-        <div id="Popup1" class="ProjectOverlay" href="#">
-            <div class="G1Popup">
-                <h2>The Unseeing Eye</h2>
-                <div class="G1Text">
-                    The Unseeing Eye is a horror game in which you have been abducted. <br>
-                    You can't see normally, and have to rely on audio, and visualized audio ripples. <br>
-                    Using your abilities, you have to find your way out without getting caught.
+        <body>
+            <header class="header" id="header">
+                <div class="header-container">
+                    <div class="namehome"><a href="/index.html">Omorian Clifford</a></div>
+                    <div class="about-me"><a href="/pages/AboutMePage.html">About me</a></div>
+                    <div class="projects"><a href="/pages/ProjectsPage.html" style="color: #00a2ff;">Projects</a></div>
+                    <div class="music"><a href="/pages/MusicPage.html">Music</a></div>
+                    <div class="contact"><a href="/pages/ContactPage.html">Contact & CV</a></div>
                 </div>
-                <a>you can find the project</a>
-                <a href="https://jusawichan.itch.io/the-unseeing-eye">here</a>
-                <a class="CloseButton" href="#"><br>&times;</a>
-            </div>
-        </div>
+                <ul class="Menu" id="Menu">
+                    <li><a href="/index.html">Home</a></li>
+                    <li><a href="AboutMePage.html">About Me</a></li>
+                    <li><a href="ProjectsPage.html">Projects</a></li>
+                    <li><a href="MusicPage.html">Music</a></li>
+                    <li><a href="ContactPage.html">Contact & CV</a></li>
+                    <a class="Close" href="#">
+                        <span class="material-icons">
+                            close
+                        </span>
+                    </a>
+                </ul>
+                <a class="Hamburger" href="#Menu">
+                    <span class="material-icons">
+                        menu
+                    </span>
+                </a>
+            </header>
 
-        <div class="GameTwo">
-            <p><a class="TD" href="#Popup2">
-                    <img class="TDImg" src="/Images/td.png" alt="Tower Defense Screenshot">
-                    <div class="TDOverlay">A tower defense game in which you defend a computer against human
-                        viruses<br>(Unity)</div>
-                </a></p>
-        </div>
-        <div id="Popup2" class="ProjectOverlay" href="#">
-            <div class="G2Popup">
-                <h2>Tower Defense</h2>
-                <div class="G2Text">
-                    In this tower defense game, you defend a computer's CPU against human viruses. <br>
-                    The Viruses spawn randomly on 1 of 4 paths, so each playthrought is different.
-                </div>
-                <a>you can find the project</a>
-                <a href="https://shreddexz.itch.io/antivirus-tower-defense">here</a>
-                <a class="CloseButton" href="#"><br>&times;</a>
-            </div>
-        </div>
 
-        <div class="GameThree">
-            <p><a class="IRT" href="#Popup3">
-                    <img class="IRTImg" src="/Images/irt.png" alt="I Remember This Art">
-                    <div class="IRTOverlay">A horror game in which you wake up in a crashed car, and have to figure out
-                        what happened<br>(Unity) [GGJ 2021]</div>
-                </a></p>
-        </div>
-        <div id="Popup3" class="ProjectOverlay" href="#">
-            <div class="G3Popup">
-                <h2>I Remember This</h2>
-                <div class="G3Text">
-                    You wake up after crashing your car into a tree. <br>
-                    You don't know what happened. The only thing you know is that you have to get home. <br>
-                    It shouldn't be too far from where you are.
-                </div>
-                <a>you can find the project</a>
-                <a href="https://jusawichan.itch.io/i-remember-this">here</a>
-                <a class="CloseButton" href="#"><br>&times;</a>
-            </div>
-        </div>
+            <div class="GamesContainer">
+                <h1><u>Game Projects</u></h1>
+                <div class="contentContainer">
 
-        <div class="GameFour">
-            <p><a class="QOTH" href="#Popup4">
-                    <img class="QOTHImg" src="/Images/qoth.png" alt="Queen of the hill Art">
-                    <div class="QOTHOverlay">A tower/base defense game in which you have to defend your
-                        ant-hill<br>(Unity/web)
-                        [GGJ 2020]</div>
-                </a></p>
-        </div>
-        <div id="Popup4" class="ProjectOverlay" href="#">
-            <div class="G4Popup">
-                <h2>Queen of the hill</h2>
-                <div class="G4Text">
-                    You have to defend your queen from the wasps, who are <br>
-                    trying to kill her. Build your defenses and keep her alive.
-                </div>
-                <a>you can find the project</a>
-                <a href="https://madifold.itch.io/queen-of-the-hill">here</a>
-                <a class="CloseButton" href="#"><br>&times;</a>
-            </div>
-        </div>
-
-        <div class="GameFive">
-            <p><a class="TLS" href="#Popup5">
-                    <img class="TLSImg" src="/Images/tls.png" alt="The Last Scientist Art">
-                    <div class="TLSOverlay">A text based adventure game in which you wake up in a dark room, and have to
-                        figure out what happened<br>(C# console)
+                    <div class="Game G1"> 
+                        <div class="content">
+                            <a href="https://shreddexz.itch.io/time-to-die" target="_blank" class="gameEl">
+                                <img class="image TUEimg" src="/Images/TTD_Img2.png">
+                                <span class="description">
+                                    <h2>Time to die</h2>
+                                    This is an FPS game in which you have to survive as long as possible against an endless amount of
+                                    enemies.
+                                </span>
+                            </a>
+                        </div>
                     </div>
-                </a></p>
-        </div>
-        <div id="Popup5" class="ProjectOverlay" href="#">
-            <div class="G5Popup">
-                <h2>The Last Scientist</h2>
-                <div class="G5Text">
-                    You wake up in a dark room, and you have no idea what happened.
-                    <br> You are alone and have to figure it out by yourself.
-                </div>
-                <a>you can find the project</a>
-                <a href="https://shreddexz.itch.io/the-last-scientist">here</a>
-                <a class="CloseButton" href="#"><br>&times;</a>
-            </div>
-        </div>
 
-        <div class="GameSix">
-            <p><a class="TTD" href="#Popup6">
-                    <img class="TTDImg" src="/Images/TTD_Img2.png" alt="Time to die Art">
-                    <div class="TTDOverlay">an endless shooter with audio visualization<br>(Unreal Engine)
+
+                    <div class="Game G2"> 
+                        <div class="content">
+                            <a href="https://jusawichan.itch.io/the-unseeing-eye" target="_blank" class="gameEl">
+                                <img class="image TUEimg" src="/Images/tue.png">
+                                <span class="description">
+                                    <h2>The Unseeing Eye</h2>
+                                    The Unseeing Eye is a horror game in which<br>
+                                        you can't see normally, and have to rely on audio and visualized audio ripples. <br>
+                                        You have to find your way out without getting caught.
+                                </span>
+                            </a>
+                        </div>
                     </div>
-                </a></p>
-        </div>
-        <div id="Popup6" class="ProjectOverlay" href="#">
-            <div class="G6Popup">
-                <h2>Time to die</h2>
-                <div class="G6Text">
-                    This is an FPS game in which you have to survive as long as possible against an endless amount of
-                    enemies.
+
+                    <div class="Game G3"> 
+                        <div class="content">
+                            <a href="https://jusawichan.itch.io/i-remember-this" target="_blank" class="gameEl">
+                                <img class="image IRTimg" src="/Images/irt.png">
+                                <span class="description">
+                                    <h2>I Remember This</h2>
+                                    You wake up after crashing your car into a tree. <br>
+                                        You don't know what happened. The only thing you know is that you have to get home. <br>
+                                        It shouldn't be too far from where you are.
+                                </span>
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="Game G4"> 
+                        <div class="content">
+                            <a href="https://shreddexz.itch.io/the-last-scientist" target="_blank" class="gameEl">
+                                <img class="image TLSimg" src="/Images/tls.png">
+                                <span class="description">
+                                    <h2>The last scientist</h2>
+                                    You wake up in a dark room, and you have no idea what happened.
+                                    <br> You are alone and have to figure it out by yourself.
+                                </span>
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="Game G5"> 
+                        <div class="content">
+                            <a href="https://shreddexz.itch.io/antivirus-tower-defense" target="_blank" class="gameEl">
+                                <img class="image TDimg" src="/Images/td.png">
+                                <span class="description">
+                                    <h2>Antivirus defense</h2>
+                                    In this tower defense game, you defend a computer's CPU against human viruses. <br>
+                                        The Viruses spawn randomly on 1 of 4 paths, so each playthrought is different.
+                                </span>
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="Game G6"> 
+                        <div class="content">
+                            <a href="https://madifold.itch.io/queen-of-the-hill" target="_blank" class="gameEl">
+                                <img class="image QOTHimg" src="/Images/qoth.png">
+                                <span class="description">
+                                    <h2>Queen of the hill</h2>
+                                    You have to defend your queen from the wasps, who are <br>
+                                        trying to kill her. Build your defenses and keep her alive.
+                                </span>
+                            </a>
+                        </div>
+                    </div>
+
                 </div>
-                <a>you can find the project</a>
-                <a href="https://shreddexz.itch.io/time-to-die">here</a>
-                <a class="CloseButton" href="#"><br>&times;</a>
-            </div>
-        </div>
-    </div><!-- game container end -->
-    </div>
+            </div><!-- game container end -->
+        </body>
 
-
-    </div>
-
-</body>
-
-</html>
+    </html>
