--- a/pages/ContactPage.html
+++ b/pages/ContactPage.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="/Sass/main.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <title>Contact Page</title>
+        <script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
 </head>
 
 <body>
@@ -45,6 +46,8 @@
             </span>
         </a>
     </header>
+<!-- <div class="badge-base LI-profile-badge" data-locale="en_US" data-size="medium" data-theme="dark" data-type="VERTICAL" data-vanity="omorianclifford" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://nl.linkedin.com/in/omorianclifford?trk=profile-badge">Omorian Clifford</a></div> -->
+              
     <div class="CIContainter">
         <div class="CIHeader">
             <a>Contact Information</a>
@@ -60,7 +63,7 @@
         </a>
     </p>
 
-    <iframe src="/pages/Files/Omorian Clifford - Game Development CV 2023.pdf" frameborder="0" class="CV"></iframe>
+    <iframe src="/pages/Files/CV - Omorian Clifford.pdf" frameborder="0" class="CV"></iframe>
 </body>
 
 </html>
