Contact form done

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Home Page</title>
-        <link rel="stylesheet" href="Sass/main.css">
+        <link rel="stylesheet" href="/Sass/main.css">
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-        <script defer src="Javascript/fade.js"></script>
+        <script defer src="/Javascript/fade.js"></script>
     </head>
 
     <body>
@@ -24,14 +24,14 @@
                 <div class="namehome"><a href="index.html">Omorian Clifford</a></div>
                 <div class="about-me"><a href="/pages/AboutMePage.html">About me</a></div>
                 <div class="projects"><a href="/pages/ProjectsPage.html">Projects</a></div>
-                <div class="music"><a href="pages/MusicPage.html">Music</a></div>
+                <div class="music"><a href="/pages/MusicPage.html">Music</a></div>
                 <div class="contact"><a href="/pages/ContactPage.html">Contact & CV</a></div>
             </div>
             <ul class="Menu" id="Menu">
-                <li><a href="index.html">Home</a></li>
+                <li><a href="/index.html">Home</a></li>
                 <li><a href="/pages/AboutMePage.html">About Me</a></li>
                 <li><a href="/pages/ProjectsPage.html">Projects</a></li>
-                <li><a href="pages/MusicPage.html">Music</a></li>
+                <li><a href="/pages/MusicPage.html">Music</a></li>
                 <li><a href="/pages/ContactPage.html">Contact & CV</a></li>
                 <a class="Close" href="#">
                     <span class="material-icons">
